--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dropbox": "^10.34.0",
     "envalid": "^8.0.0",
     "save": "^2.9.0",
-    "ts-jest": "^29.2.5"
+    "ts-jest": "^29.2.5",
+    "zod": "^3.23.8"
   }
 }
